
v9.4
o Updated the wielding to account for the no-longer-really-recent change that makes it no longer require equilibrium.
o Adding a waiting check for wielding to cut down on spam. -Elanoron
o Added berserking's DEF line, and the tick for when you attempt to use it while already berserk. This should alleviate the problem with spamming it after checking DEF while bashing. -Evaldir
o Updated and corrected various attack triggers in accordance with recent changes in-game. -Elanoron
o Added Elanoron's fix to the soldier bashing function to make handling disarm cleaner. -Elanoron
o Finished up the halfway-sorta-almost done work from the previous version with adding an offhand queue. -Elanoron, Evaldir
o Included some bandaid fixes for illusion checking. The framework for a real one is in place but not yet fully implemented, expect for next update! -Elanoron
o Updated the ?toggles and ?bashing output a bit. -Ashra

v9.5
o Added an illusion checker. -Savil
o Updated fishing triggers/scripts. -Savil
o Added dystrophy triggers. -Savil
o New learning script. -Naftali
o Balance and equilibrium tracking from GMCP. -Naftali
o Reworked scripts loading/saving. -Savil
o Reworked options handling, and options/toggles display -Savil

v9.6
o Added a way to customize defense options with aliases (ldd, chd, sdd) -Savil
o Added an alias GMCPcheck to test if GMCP is enabled -Savil
o Updated ?help -Savil
o Updated the mg alias, to use the correct guards for each city -Savil
o Added a gripping toggle -Elanoron
o Added a swordmaster defense option -Elanoron
o Updated the rewield script -Elanoron
o Added triggers for whispers (outgoing hits) -Elanoron
o Defense skill checks -Naftali
o Fixed auto-closing -Elanoron
o Added blackout cure trigger -Elanoron

v9.6.1
o Reverted some breaking changes (defenses skill checks, and a debugging one)
o Fixed a few internal scripts to handle fighting
o Fixed a blackout trigger -Elanoron